<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/stockList_companyName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lora_bold"
            android:text="Company Name"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/stockList_stockExchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NSE"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/stockList_companyName"
            app:layout_constraintTop_toBottomOf="@+id/stockList_companyName" />

        <TextView
            android:id="@+id/stockList_tickerSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="SYM"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/stockList_stockExchange"
            app:layout_constraintTop_toTopOf="@+id/stockList_stockExchange" />

        <TextView
            android:id="@+id/stockList_peRatioLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pe_ratio_label"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/stockList_stockExchange"
            app:layout_constraintTop_toBottomOf="@+id/stockList_stockExchange" />

        <TextView
            android:id="@+id/stockList_peRatioValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="0.1"
            android:textColor="#303030"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/stockList_peRatioLabel" />

        <TextView
            android:id="@+id/stockList_pbRatioLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/pb_ratio_label"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/stockList_peRatioValue" />

        <TextView
            android:id="@+id/stockList_pbRatioValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="2"
            android:textColor="#303030"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/stockList_pbRatioLabel" />

        <TextView
            android:id="@+id/stockList_fiftyTwoWkHighLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="8dp"
            android:text="@string/fifty_two_week_high_label"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/stockList_peRatioLabel"
            app:layout_constraintTop_toBottomOf="@+id/stockList_peRatioLabel" />

        <TextView
            android:id="@+id/stockList_fiftyTwoWkHighValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1000"
            android:textColor="#303030"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/stockList_peRatioValue"
            app:layout_constraintTop_toTopOf="@+id/stockList_fiftyTwoWkHighLabel" />

        <TextView
            android:id="@+id/stockList_fiftyTwoWkLowLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fifty_two_week_low_label"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/stockList_pbRatioLabel"
            app:layout_constraintTop_toTopOf="@+id/stockList_fiftyTwoWkHighValue" />

        <TextView
            android:id="@+id/stockList_fiftyTwoWkLowValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="980"
            android:textColor="#303030"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/stockList_pbRatioValue"
            app:layout_constraintTop_toTopOf="@+id/stockList_fiftyTwoWkLowLabel" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>